--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "stylelint": "^15.11.0",
     "stylelint-config-property-sort-order-smacss": "^9.1.0",
     "stylelint-config-standard-scss": "^11.0.0",
+    "swiper": "^11.0.5",
     "vite": "^5.0.0",
     "vite-plugin-handlebars": "^1.6.0",
     "vite-plugin-sass-glob-import": "^3.0.2"
